Agregué la conexión a la DB en el web.config, y agregué las PK de las clases

--- a/Futbapp/Views/Home/CompletarRegistro.cshtml
+++ b/Futbapp/Views/Home/CompletarRegistro.cshtml
@@ -37,6 +37,7 @@
 			  <div class="form-group">
 			    <div class="col-sm-12">
 					<select name="OS" class="form-control provincia">
+                        <option>Seleccione la provincia</option>
 						<option>Buenos Aires</option> 
 						<option>Cordoba</option> 
 						<option>Santa Fe</option>
@@ -44,13 +45,13 @@
 			    </div>
 			  </div>
 			  <div class="form-group">
-			    <div class="col-sm-12 partidos">
+			    <div class="col-sm-12">
 					<select name="OS" class="form-control partidos">
 					</select>
 			    </div>
 			  </div>
 			  <div class="form-group">
-			    <div class="col-sm-12 zonas">
+			    <div class="col-sm-12">
 					<select name="OS" class="form-control zonas">
 					</select>
 			    </div>
