--- a/Futbapp/Views/Home/Index.cshtml
+++ b/Futbapp/Views/Home/Index.cshtml
@@ -69,20 +69,20 @@
 		<div class="col-sm-offset-3 col-sm-6">
 			<h3 class="col-sm-offset-3 col-sm-6">Contacto</h3>
 		</div>
-		<form class="form-horizontal col-sm-offset-3 col-sm-6"  onsubmit="return validarContacto()">
+		<form method="post" action="@Url.Action("ComentarioContacto", "Home")" class="form-horizontal col-sm-offset-3 col-sm-6"  onsubmit="return validarContacto()">
 		  <div class="form-group">
 		    <div class="col-sm-12">
-		      <input type="text" class="form-control" id="nombre" placeholder="Ingrese su nombre" required>
+		      <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingrese su nombre" required>
 		    </div>
 		  </div>
 		  <div class="form-group">
 		    <div class="col-sm-12">
-		      <input type="email" class="form-control" id="email" placeholder="Ingrese su E-mail" required>
+		      <input type="email" class="form-control" id="email" name="email" placeholder="Ingrese su E-mail" required>
 		    </div>
 		  </div>
 		  <div class="form-group">
 		    <div class="col-sm-12">
-		      <textarea class="form-control" id="comentario" placeholder="Deje su comentario" required></textarea>
+		      <textarea class="form-control" id="comentario" name="comentario" placeholder="Deje su comentario" required></textarea>
 		    </div>
 		  </div>
 		  <div class="form-group"> 
