--- a/Futbapp/Views/Home/CompletarRegistro.cshtml
+++ b/Futbapp/Views/Home/CompletarRegistro.cshtml
@@ -1,4 +1,8 @@
-﻿	<section class="col-sm-12 main">
+﻿@{ 
+    ViewBag.tittle = "ConpletarRegistro";
+}
+
+	<section class="col-sm-12 main">
 		<header class="col-sm-12">
 			<div class="col-sm-offset-1 col-sm-10">
 				<h1 class="col-sm-offset-3 col-sm-6">Complete su registro</h1><br>	
