--- a/Futbapp/Views/Home/Index.cshtml
+++ b/Futbapp/Views/Home/Index.cshtml
@@ -18,20 +18,39 @@
 
 	<!-------------------- ******************** -------------------->
 
-	<section class="col-sm-12 seccionSecundaria" id="info">
-		<div class="col-sm-offset-1 col-sm-10">			
-			<div class="col-sm-4">
-				<img src="~/Image/principal.jpg" class="img-rounded">
-			</div>
-			<div class="col-sm-offset-2 col-sm-6">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-			</div>
-		</div>
-	</section>
+    <div id="myCarousel" class="carousel slide col-sm-12" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="~/Image/carrousel1.jpg" class="img-rounded">
+            </div>
+
+            <div class="item">
+                <img src="~/Image/carrousel2.jpg" class="img-rounded">
+            </div>
+
+            <div class="item">
+                <img src="~/Image/carrousel3.jpg" class="img-rounded">
+            </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 
 	<!-------------------- ******************** -------------------->
 
