--- a/Futbapp/Views/Shared/_Layout.cshtml
+++ b/Futbapp/Views/Shared/_Layout.cshtml
@@ -35,8 +35,8 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Entrar<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Login</a></li>
-                            <li><a href="#">Registrarse</a></li>
+                            <li><a href="#" data-toggle="modal" data-target="#myModal">Login</a></li>
+                            <li><a href="#">@Html.ActionLink("Registrarse", "Registro", "Home")</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -44,7 +44,38 @@
         </div><!-- /.container-fluid -->
     </nav>
 
-
+    <div class="modal fade" tabindex="-1" role="dialog" id="myModal">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">¡Ingresar!</h4>
+                </div>
+                <div class="modal-body">
+                    <form class="form-horizontal col-sm-offset-3 col-sm-6">
+                        <div class="form-group">
+                            <div class="col-sm-12">
+                                <input type="text" class="form-control" id="usuario" placeholder="Ingrese un nombre de usuario" required>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-12">
+                                <input type="password" class="form-control" id="password" placeholder="Ingrese su password" required>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-12">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                                <button type="button" class="btn btn-primary">Ingresar</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
     @RenderBody()
 
     @Scripts.Render("~/bundles/jquery")
