--- a/Futbapp/Views/Home/Registro.cshtml
+++ b/Futbapp/Views/Home/Registro.cshtml
@@ -11,20 +11,20 @@
         <h2 class="col-sm-offset-3 col-sm-6">Registro</h2>
 
     </div>
-    <form class="form-horizontal col-sm-offset-3 col-sm-6" onsubmit="return validarRegistro()">
+    <form class="form-horizontal col-sm-offset-3 col-sm-6" method="post" action="@Url.Action("Registro", "Registro")"   return validarRegistro()">
         <div class="form-group">
             <div class="col-sm-12">
-                <input type="text" class="form-control" id="usuario" placeholder="Ingrese un nombre de usuario" required>
+                <input type="text" class="form-control" name="Usuario" id="usuario" placeholder="Ingrese un nombre de usuario" required>
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-12">
-                <input type="email" class="form-control" id="email" placeholder="Ingrese su E-mail" required>
+                <input type="email" class="form-control" name="Email" id="email" placeholder="Ingrese su E-mail" required>
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-12">
-                <input type="password" class="form-control" id="password" placeholder="Ingrese su password (minimo 4 caracteres)" required>
+                <input type="password" class="form-control" name="Password" id="password" placeholder="Ingrese su password (minimo 4 caracteres)" required>
             </div>
         </div>
         <div class="form-group">
