--- a/Futbapp/Views/Shared/_Layout.cshtml
+++ b/Futbapp/Views/Shared/_Layout.cshtml
@@ -47,32 +47,32 @@
     <div class="modal fade" tabindex="-1" role="dialog" id="myModal">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">¡Ingresar!</h4>
-                </div>
-                <div class="modal-body">
-                    <form class="form-horizontal col-sm-offset-3 col-sm-6">
+                <form class="form-signin col-sm-offset-3 col-sm-6" method="post" action="@Url.Action("Login","Login")">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title">¡Ingresar!</h4>
+                    </div>
+                    <div class="modal-body">
                         <div class="form-group">
                             <div class="col-sm-12">
-                                <input type="text" class="form-control" id="usuario" placeholder="Ingrese un nombre de usuario" required>
+                                <input type="text" class="form-control" name="Usuario" id="usuario" placeholder="Ingrese un nombre de usuario" required>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-sm-12">
-                                <input type="password" class="form-control" id="password" placeholder="Ingrese su password" required>
+                                <input type="password" class="form-control" name="Password" id="password" placeholder="Ingrese su password" required>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-sm-12">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-                                <button type="button" class="btn btn-primary">Ingresar</button>
+                                <input type="button" class="btn btn-primary" value="Ingresar" />
                             </div>
                         </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                </div>
+                    </div>
+                    <div class="modal-footer">
+                    </div>
+                </form>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
