--- a/Futbapp/Views/Home/CompletarRegistro.cshtml
+++ b/Futbapp/Views/Home/CompletarRegistro.cshtml
@@ -26,15 +26,15 @@
 			<div class="col-sm-offset-3 col-sm-6">
 				<h3 class="col-sm-offset-2 col-sm-8">Complete sus datos personales</h3>
 			</div>
-			<form class="form-horizontal col-sm-offset-3 col-sm-6" method="post" action="@Url.Action("CompletarRegistro", "Registro")">
+			<form class="form-horizontal col-sm-offset-3 col-sm-6" method="post" action="@Url.Action("Completar", "Registro")">
 			  <div class="form-group">
 			    <div class="col-sm-12">
-			      <input type="text" class="form-control" id="nombre" placeholder="Nombre" required>
+			      <input type="text" class="form-control" name="Nombre" id="nombre" placeholder="Nombre" required>
 			    </div>
 			  </div>
 			  <div class="form-group">
 			    <div class="col-sm-12">
-			      <input type="text" class="form-control" id="apellido" placeholder="Apellido" required>
+			      <input type="text" class="form-control" name="Apellido" id="apellido" placeholder="Apellido" required>
 			    </div>
 			  </div>
 			  <div class="form-group">
