--- a/Futbapp/Views/Home/Registro.cshtml
+++ b/Futbapp/Views/Home/Registro.cshtml
@@ -34,7 +34,7 @@
         </div>
         <div class="form-group">
             <div class="col-sm-12">
-                <button type="submit" class="btn btn-primary btn-large btn-block">¡Registrate!</button>
+                <input type="submit" class="btn btn-primary btn-large btn-block" value="¡Completar Registro!"/>
             </div>
         </div>
     </form>
