Agrego css para index y general(Layout), cambio de colores de las posiciones de equipo e individual, cambio de imagenes del caroulsel

--- a/Futbapp/Content/index.css
+++ b/Futbapp/Content/index.css
@@ -1,3 +1,13 @@
-﻿body{
-    text-align: center;
+﻿.posicion1{
+    background-color:lawngreen;
+}
+.posicion2{
+    background-color:yellow
+}
+.posicion3{
+    background-color: red
+}
+
+div img{
+    text-align:center;
 }
