--- a/Futbapp/Views/Shared/_Layout.cshtml
+++ b/Futbapp/Views/Shared/_Layout.cshtml
@@ -7,7 +7,8 @@
     <title>@ViewBag.Title - Futbapp</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <link rel="stylesheet" type="text/css" href="~/Content/index.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/general.css">
+    @RenderSection("styles",required: false)
 </head>
 
 <body class="row" data-spy="scroll" data-target=".navbar" data-offset="50">
