Arreglo de la visualización del modal login, y centrado del carousel

--- a/Futbapp/Views/Home/Index.cshtml
+++ b/Futbapp/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
             </div>
 
             <div class="item">
-                <img src="~/Image/carrousel3.jpg" class="img-rounded">
+                <img src="~/Image/carrousel3.jpg" class="img-rounded"/>
             </div>
         </div>
 
@@ -55,7 +55,7 @@
 
 	<!-------------------- ******************** -------------------->
 
-    <div class="container col-sm-12 seccionSecundaria">
+    <div class="container col-sm-12">
         <h2>Top equipos</h2>
         <table class="table table-condensed">
             <thead class="col-sm-12">
@@ -114,7 +114,7 @@
     <!-------------------- ******************** -------------------->
 
 
-    <div class="container col-sm-12 seccionSecundaria">
+    <div class="container col-sm-12">
         <h2>Top Jugadores</h2>
         <table class="table table-condensed">
             <thead class="col-sm-12">
