--- a/Futbapp/Content/index.css
+++ b/Futbapp/Content/index.css
@@ -2,12 +2,16 @@
     background-color:lawngreen;
 }
 .posicion2{
-    background-color:yellow
+    background-color:yellow;
 }
 .posicion3{
-    background-color: red
+    background-color: red;
 }
 
-div img{
+.carousel-inner img{
+    margin: 0 auto;
+}
+
+h2{
     text-align:center;
 }
