--- a/Futbapp/Views/Home/Index.cshtml
+++ b/Futbapp/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Futbapp.Models
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home";
 }
 @section styles{
     <link  rel="stylesheet" type="text/css" href="~/Content/index.css">
@@ -178,10 +178,9 @@
             </div>
             <div class="form-group">
                 <div class="col-sm-12">
-                    <button type="submit" class="btn btn-primary btn-large btn-block">Enviar</button>
+                    <input type="submit" class="btn btn-primary btn-large btn-block" value="Enviar"/>
                 </div>
             </div>
         </form>
     </section>
-
 
