--- a/Futbapp/Views/Shared/_Layout.cshtml
+++ b/Futbapp/Views/Shared/_Layout.cshtml
@@ -22,15 +22,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#index">@Html.ActionLink("FUTBAPP", "Index", "Home")</a>
+                <a class="navbar-brand hoverNav" href="#index"> @Html.ActionLink("FUTBAPP", "Index", "Home") </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="#info">Info</a></li>
-                    <li><a href="#contacto">Contacto</a></li>
-                    <li><a href="#">Jugadores</a></li>
+                    <li class="hoverNav"><a href="#info">Info</a></li>
+                    <li class="hoverNav"><a href="#contacto">Contacto</a></li>
+                    <li class="hoverNav"><a href="#">Jugadores</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
@@ -73,6 +73,7 @@
                 </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
         </form>
+
     @RenderBody()
 
     @Scripts.Render("~/bundles/jquery")
