--- a/Futbapp/Views/Shared/_Layout.cshtml
+++ b/Futbapp/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@using Futbapp.Models;
+@{ 
+    Usuario usuario = (Usuario)Session["UsuarioLogeado"];
+}
+
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -22,7 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand hoverNav" href="#index"> @Html.ActionLink("FUTBAPP", "Index", "Home") </a>
+                <a class="navbar-brand hoverNav" href="@Url.Action("Index", "Home") ">FUTBAPP</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -34,11 +39,24 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Entrar<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#" data-toggle="modal" data-target="#myModal">Login</a></li>
-                            <li><a href="#">@Html.ActionLink("Registrarse", "Registro", "Home")</a></li>
-                        </ul>
+                        @{
+                            if (usuario == null)
+                            {
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Entrar<span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#" data-toggle="modal" data-target="#myModal">Login</a></li>
+                                    <li><a href="@Url.Action("Registro", "Home")">Registrarse</a></li>
+                                </ul>
+                            }
+                            else
+                            {
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@(usuario.NombreDeUsuario)<span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#" data-toggle="modal" data-target="#myModal">Login</a></li>
+                                    <li><a href="@Url.Action("Logout", "Login")">Logout</a></li>
+                                </ul>
+                            }
+                        }
                     </li>
                 </ul>
             </div><!-- /.navbar-collapse -->
@@ -66,8 +84,8 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-                            <input type="button" class="btn btn-primary" value="Ingresar" />
+                            <input type="button" class="btn btn-default" data-dismiss="modal" value="Cerrar">
+                            <input type="submit" class="btn btn-primary" value="Ingresar">
                         </div>
                     </div><!-- /.modal-content -->
                 </div><!-- /.modal-dialog -->
