--- a/Futbapp/Content/index.css
+++ b/Futbapp/Content/index.css
@@ -1,10 +1,10 @@
-﻿.posicion1{
+﻿.posicion_1{
     background-color:lawngreen;
 }
-.posicion2{
+.posicion_2{
     background-color:yellow;
 }
-.posicion3{
+.posicion_3{
     background-color: red;
 }
 
