--- a/Futbapp/Views/Shared/_Layout.cshtml
+++ b/Futbapp/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
                             {
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@(usuario.NombreDeUsuario)<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#" data-toggle="modal" data-target="#myModal">Login</a></li>
+                                    <li><a href="#" data-toggle="modal">Mi Perfil</a></li>
                                     <li><a href="@Url.Action("Logout", "Login")">Logout</a></li>
                                 </ul>
                             }
