limpieza de código

--- a/Futbapp/Views/Home/Registro.cshtml
+++ b/Futbapp/Views/Home/Registro.cshtml
@@ -11,7 +11,7 @@
         <h2 class="col-sm-offset-3 col-sm-6">Registro</h2>
 
     </div>
-    <form class="form-horizontal col-sm-offset-3 col-sm-6" method="post" action="@Url.Action("Registro", "Registro")"   return validarRegistro()">
+    <form class="form-horizontal col-sm-offset-3 col-sm-6" method="post" action="@Url.Action("Registro", "Registro")"  return validarRegistro()>
         <div class="form-group">
             <div class="col-sm-12">
                 <input type="text" class="form-control" name="Usuario" id="usuario" placeholder="Ingrese un nombre de usuario" required>
