--- a/Futbapp/Content/index.css
+++ b/Futbapp/Content/index.css
@@ -17,3 +17,41 @@
 h2{
     text-align:center;
 }
+
+.titulo {
+    text-shadow: 2.5px 2.5px 5px #888888;
+    animation: cambioColor 20s infinite;
+}
+
+@keyframes cambioColor{
+    0% {
+        color: #0D3070;
+    }
+    10% {
+        color: #4290D8;
+    }
+    20% {
+        color: #1F5F8D;
+    }
+    30% {
+        color: #58ADF0;
+    }
+    40% {
+        color: #B4F4F6;
+    }
+    50% {
+        color: #006D6E;
+    }
+    70% {
+        color: #B4F4F6;
+    }
+    80% {
+        color: #58ADF0;
+    }
+    90% {
+        color: #1F5F8D;
+    }
+    100% {
+        color: #0D3070;
+    }
+}
