--- a/Futbapp/Views/Home/Index.cshtml
+++ b/Futbapp/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     }
 	<header class="col-sm-12">
 		<div class="col-sm-offset-1 col-sm-10">
-			<h1 class="col-sm-offset-3 col-sm-6">Bienvenido a Futbapp</h1><br />
+			<h1 class="col-sm-offset-3 col-sm-6 titulo">Bienvenido a Futbapp</h1><br />
 		</div>
         <div class="col-sm-offset-1 col-sm-10">
             <p class="col-sm-12 ">
