--- a/Futbapp/Views/Shared/_Layout.cshtml
+++ b/Futbapp/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                     <li class="hoverNav"><a href="#info">Info</a></li>
                     <li class="hoverNav"><a href="#contacto">Contacto</a></li>
                     <li class="hoverNav"><a href="#">Jugadores</a></li>
+                    <li class="hoverNav"><a href="#">Lista de Equipos</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
@@ -52,7 +53,8 @@
                             {
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@(usuario.NombreDeUsuario)<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#" data-toggle="modal">Mi Perfil</a></li>
+                                    <li><a href="#">Mi Perfil</a></li>
+                                    <li><a href="#">Crear Equipo</a></li>
                                     <li><a href="@Url.Action("Logout", "Login")">Logout</a></li>
                                 </ul>
                             }
