--- a/Futbapp/Views/Shared/_Layout.cshtml
+++ b/Futbapp/Views/Shared/_Layout.cshtml
@@ -53,8 +53,10 @@
                             {
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@(usuario.NombreDeUsuario)<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Mi Perfil</a></li>
+                                    <li><a href="@Url.Action("MiPerfil","PerfilDeUsuario")">Mi Perfil</a></li>
                                     <li><a href="#">Crear Equipo</a></li>
+                                    <li><a href="#">Establecer Partido</a></li>
+                                    <li><a href="#">Buscar Partido</a></li>
                                     <li><a href="@Url.Action("Logout", "Login")">Logout</a></li>
                                 </ul>
                             }
