Agrego vista de Miperfil

--- a/Futbapp/Views/Home/MiPerfil.cshtml
+++ b/Futbapp/Views/Home/MiPerfil.cshtml
@@ -2,5 +2,60 @@
     ViewBag.Title = "MiPerfil";
 }
 
-<h2>MiPerfil</h2>
-
+<div class="container col-sm-12">
+    <div class="col-sm-6 col-sm-offset-3">
+        <h2>NombreUsuario</h2>
+    </div>
+    <section class="col-sm-4">
+        <div><strong>Nombre</strong></div>
+        <div>Roman</div>
+        <div><strong>Apellido</strong></div>
+        <div>Sotto</div>
+        <div><strong>Email</strong></div>
+        <div>SottoR@gmail.com</div>
+        <div><strong>Zona</strong></div>
+        <div>San Justo, La Matanza, Buenos Aires</div>
+    </section>
+    <section class="col-sm-8">
+        <table class="table table-condensed">
+            <thead class="col-sm-12">
+                <tr>
+                    <th>Fecha</th>
+                    <th>Equipo</th>
+                    <th>Equipo Ganador</th>
+                    <th>Goles hechos</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>26-07-2017</th>
+                    <th>Blabla vs lalalala</th>
+                    <th>Blabla</th>
+                    <th>2</th>
+                    <th>Detalles</th>
+                </tr>
+                <tr>
+                    <th>26-07-2017</th>
+                    <th>Blabla vs lalalala</th>
+                    <th>Blabla</th>
+                    <th>2</th>
+                    <th>Detalles</th>
+                </tr>
+                <tr>
+                    <th>26-07-2017</th>
+                    <th>Blabla vs lalalala</th>
+                    <th>Blabla</th>
+                    <th>2</th>
+                    <th>Detalles</th>
+                </tr>
+                <tr>
+                    <th>26-07-2017</th>
+                    <th>Blabla vs lalalala</th>
+                    <th>Blabla</th>
+                    <th>2</th>
+                    <th>Detalles</th>
+                </tr>
+            </tbody>
+</table>
+</section>
+</div>
