--- a/Futbapp/Content/index.css
+++ b/Futbapp/Content/index.css
@@ -20,12 +20,15 @@ h2{
 
 .titulo {
     text-shadow: 2.5px 2.5px 5px #888888;
-    animation: cambioColor 20s infinite;
+    animation: cambioColor 30s infinite;
 }
 
 @keyframes cambioColor{
     0% {
         color: #0D3070;
+    }
+    5%{
+        font-size
     }
     10% {
         color: #4290D8;
