--- a/Futbapp/Views/Home/Index.cshtml
+++ b/Futbapp/Views/Home/Index.cshtml
@@ -156,7 +156,7 @@
         <div class="col-sm-offset-3 col-sm-6">
             <h3 class="col-sm-offset-3 col-sm-6">Déjenos su comentario</h3>
         </div>
-        <form method="post" action="@Url.Action("ComentarioContacto", "Home")" class="form-horizontal col-sm-offset-3 col-sm-6" onsubmit="return validarContacto()">
+        <form method="post" action="@Url.Action("ComentarioContacto", "Home")" class="form-horizontal col-sm-offset-3 col-sm-6">
             <div class="form-group">
                 <div class="col-sm-12">
                     <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingrese su nombre" required>
