--- a/Futbapp/Views/Usuario/MiPerfil.cshtml
+++ b/Futbapp/Views/Usuario/MiPerfil.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container col-sm-12">
     <div class="col-sm-6 col-sm-offset-3">
-        <h2>NombreUsuario</h2>
+        <h2>@Model.NombreDeUsuario</h2>
     </div>
     <section class="col-sm-4">
         <div><strong>Nombre</strong></div>
@@ -16,7 +16,9 @@
         <div><strong>Email</strong></div>
         <div>@Model.Email</div>
         <div><strong>Equipo</strong></div>
+        <div>@Model.Equipo</div>
         <div><strong>Zona</strong></div>
+        <div>@Model.Ubicacion</div>
     </section>
     <section class="col-sm-8">
         <table class="table table-condensed">
